Update package